@@ -1,0 +1,8 @@
+package org.fenixedu.bennu;
+
+import org.fenixedu.bennu.spring.BennuSpringModule;
+
+@BennuSpringModule(basePackages = "org.fenixedu.spaces.ui", bundles = "SpacesResources")
+public class FenixEduSpacesSpringConfiguration {
+
+}
