@@ -1,3 +1,5 @@
+- Bug fix: Adding class that uses @BennuSpringModule to register spaces controllers [#qubIT-Omnis-5811]
+
 7.9.1 (29-04-2024)
 - Refactor: Add missing fenixedu-spaces UI css and js [#qubIT-Omnis-5753]
 
